@@ -81,6 +81,12 @@ notably bibtex database files and ML files.
 * Action "isabelle.draft" is similar to "isabelle.preview", but shows a
 plain-text document draft.
 
+* When loading text files, the Isabelle symbols encoding UTF-8-Isabelle
+is only used if there is no conflict with existing Unicode sequences in
+the file. Otherwise, the fallback encoding is plain UTF-8 and Isabelle
+symbols remain in literal \<symbol> form. This avoids accidental loss of
+Unicode content when saving the file.
+
 
 *** Isabelle/VSCode Prover IDE ***
 
